--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,56 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@600;800&display=swap");
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	scroll-behavior: smooth;
+}
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+	--mainfont: "Montserrat", sans-serif;
+	--boldfont: 800;
+	--regularfont: 600;
+	--dark: #1b1b23;
+	--orange: #e15a30;
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+	.text-balance {
+		text-wrap: balance;
+	}
+}
+
+.landing-section {
+	height: 100vh;
+	overflow: hidden;
+	background-color: var(--dark);
+}
+.landing-bg {
+	position: fixed;
+	object-fit: cover;
+	width: 100%;
+	height: 100vh;
+	opacity: 0.45;
+}
+
+.about-section {
+	height: 100vh;
+	background-color: var(--dark);
+	border-radius: 0 0 10px 10px;
+	display: flex;
+	padding-left: 10vw;
+	padding-right: 10vw;
+	align-items: center;
+	position: relative;
+	overflow: hidden;
+}
+.about-bg {
+	position: absolute;
+	object-fit: cover;
+	width: 60%;
+	margin-left: 10%;
+	height: 100vh;
+	opacity: 0.45;
 }
