--- a/app/app.module.css
+++ b/app/app.module.css
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair:opsz,wght@5..1200,800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
-.landingTitle {
+.title {
 	font-family: var(--mainfont);
 }
 
-.landingSubtitle {
+.text {
 	font-family: var(--secondaryfont);
 }
 
@@ -18,4 +18,22 @@
 }
 .cta:hover {
 	background-color: var(--orange);
+}
+.background {
+	background-color: var(--dark);
+}
+
+@keyframes fadeIn {
+	from {
+		opacity: 0;
+		margin-top: 20px;
+	}
+	to {
+		opacity: 1;
+		margin-top: 0px;
+	}
+}
+
+.fadeInAnimation {
+	animation: fadeIn 1s ease-in;
 }
