--- a/app/globals.css
+++ b/app/globals.css
@@ -35,12 +35,10 @@
 }
 
 .about-section {
-	height: 100vh;
+	/* height: 100vh; */
 	background-color: var(--dark);
-	border-radius: 0 0 10px 10px;
+	/* border-radius: 0 0 10px 10px; */
 	display: flex;
-	padding-left: 10vw;
-	padding-right: 10vw;
 	align-items: center;
 	position: relative;
 	overflow: hidden;
@@ -54,7 +52,7 @@
 	opacity: 0.45;
 }
 @layer base {
-  :root {
+	:root {
 		--background: 0 0% 100%;
 		--foreground: 0 0% 3.9%;
 		--card: 0 0% 100%;
@@ -81,7 +79,7 @@
 		--chart-5: 27 87% 67%;
 		--radius: 0.5rem;
 	}
-  .dark {
+	.dark {
 		--background: 0 0% 3.9%;
 		--foreground: 0 0% 98%;
 		--card: 0 0% 3.9%;
@@ -109,10 +107,10 @@
 	}
 }
 @layer base {
-  * {
-    @apply border-border;
+	* {
+		@apply border-border;
 	}
-  body {
-    @apply bg-background text-foreground;
+	body {
+		@apply bg-background text-foreground;
 	}
 }
